--- a/lauras-blog/_quarto.yml
+++ b/lauras-blog/_quarto.yml
@@ -10,6 +10,11 @@ website:
         href: https://github.com/
       - icon: twitter
         href: https://twitter.com
+        
+project:
+  type: website
+  output-dir: docs
+
 format:
   html:
     theme: cosmo
